--- a/_posts/0000-01-02-Sneha-289.md
+++ b/_posts/0000-01-02-Sneha-289.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "welcome to our second slide!"
 ---
-Your text
+"The purpose of our lives is to be happy"- DALAI LAMA
 Use the left arrow to go back!
